@@ -2263,6 +2263,10 @@ instead of
 @eprog\noindent
 for an algebraic integer $x$.
 
+\fun{GEN}{nfgaloismatrixapply}{GEN nf, GEN M, GEN x} given an automorphism
+$M$ in \kbd{nfgaloismatrix} form, return the image of $x$ under the
+automorphism. Variant of \kbd{galoisapply}.
+
 \section{Quadratic number fields and quadratic forms}
 
 \subsec{Checks}
